--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^2.6.5",
     "deepmerge": "^4.0.0",
     "is_js": "^0.9.0",
+    "lodash": "^4.17.15",
     "urijs": "^1.19.1",
     "vue": "^2.6.10",
     "vue-markdown": "^2.2.4",
