--- a/package.json
+++ b/package.json
@@ -5,36 +5,39 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "library": "vue-cli-service build --target lib --name 'options' ./src/App.vue",
     "lint": "vue-cli-service lint",
+    "library": "vue-cli-service build --target lib --name 'options' ./src/App.vue",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "bulma": "^0.7.5",
+    "bulma": "^0.8.0",
     "bulma-slider": "^2.0.0",
-    "core-js": "^2.6.5",
+    "bulma-switch": "^2.0.0",
+    "core-js": "^3.6.4",
     "deepmerge": "^4.0.0",
     "is_js": "^0.9.0",
     "lodash": "^4.17.15",
     "urijs": "^1.19.1",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-markdown": "^2.2.4",
     "vue-material-design-icons": "^3.3.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-eslint": "^3.9.0",
-    "@vue/cli-plugin-unit-jest": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "@vue/cli-plugin-babel": "~4.2.2",
+    "@vue/cli-plugin-eslint": "~4.2.2",
+    "@vue/cli-plugin-unit-jest": "~4.2.2",
+    "@vue/cli-service": "~4.2.2",
+    "@vue/eslint-config-standard": "^5.1.0",
+    "@vue/test-utils": "1.0.0-beta.31",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.1.2",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
   }
 }
