--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "library": "vue-cli-service build --target lib --name 'options' ./src/App.vue",
+    "library": "vue-cli-service build --target lib --formats umd-min --name options ./src/App.vue",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
