--- a/package.json
+++ b/package.json
@@ -5,39 +5,39 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "library": "vue-cli-service build --target lib --formats umd-min --name options ./src/App.vue",
-    "test:unit": "vue-cli-service test:unit"
+    "library": "vue-cli-service build --target lib --formats umd-min --name options ./src/App.vue"
   },
   "dependencies": {
-    "bulma": "^0.8.0",
-    "bulma-slider": "^2.0.0",
+    "bulma": "^0.8.2",
+    "bulma-slider": "^2.0.4",
     "bulma-switch": "^2.0.0",
-    "core-js": "^3.6.4",
-    "deepmerge": "^4.0.0",
+    "core-js": "^3.8.1",
+    "deepmerge": "^4.2.2",
     "is_js": "^0.9.0",
-    "lodash": "^4.17.15",
-    "urijs": "^1.19.1",
-    "vue": "^2.6.11",
+    "lodash": "^4.17.20",
+    "urijs": "^1.19.4",
+    "vue": "^2.6.12",
     "vue-markdown": "^2.2.4",
-    "vue-material-design-icons": "^3.3.1"
+    "vue-material-design-icons": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.2",
-    "@vue/cli-plugin-eslint": "~4.2.2",
-    "@vue/cli-plugin-unit-jest": "~4.2.2",
-    "@vue/cli-service": "~4.2.2",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-plugin-unit-jest": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
     "@vue/eslint-config-standard": "^5.1.0",
     "@vue/test-utils": "1.0.0-beta.31",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.25.0",
+    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   }
 }
